--- a/StarterPack/OptimaJet.DWKit.StarterApplication/Views/Account/Login.cshtml
+++ b/StarterPack/OptimaJet.DWKit.StarterApplication/Views/Account/Login.cshtml
@@ -54,4 +54,5 @@
 <div class="dwkit-app-sample-footer">
     Only non-commercial use. For commercial use, please contact <a href="mailto:sales@optimajet.com">sales@optimajet.com</a>. Official site - <a href="https://dwkit.com">https://dwkit.com</a>.
 </div>
+<script src="@Url.Content("~/js/vendor.js")"></script>
 <script src="@Url.Content("~/js/login.js")"></script>
