--- a/StarterPack/OptimaJet.DWKit.StarterApplication/Views/ConfigAPI/Admin.cshtml
+++ b/StarterPack/OptimaJet.DWKit.StarterApplication/Views/ConfigAPI/Admin.cshtml
@@ -12,4 +12,5 @@
 
 <div id="content" class="container"></div>
 
+<script src="@Url.Content("~/js/vendor.js")"></script>
 <script src="@Url.Content("~/js/admin.js")" type="text/javascript"></script>
