--- a/StarterPack/OptimaJet.DWKit.StarterApplication/Views/StarterApplication/Index.cshtml
+++ b/StarterPack/OptimaJet.DWKit.StarterApplication/Views/StarterApplication/Index.cshtml
@@ -6,4 +6,5 @@
 <script src="@Url.Content("~/ui/form/businessobjects.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/js/GlobalUserActions.js")" type="text/javascript"></script>
 <div id="content"></div>
+<script src="@Url.Content("~/js/vendor.js")"></script>
 <script src="@Url.Content("~/js/app.js")"></script>
