--- a/VacationRequest/OptimaJet.DWKit.StarterApplication/Views/ConfigAPI/Admin.cshtml
+++ b/VacationRequest/OptimaJet.DWKit.StarterApplication/Views/ConfigAPI/Admin.cshtml
@@ -12,5 +12,5 @@
 <link href="@Url.Content("~/css/workflowdesigner.css")" rel="stylesheet" type="text/css" />
 
 <div id="content" class="container"></div>
-
+<script src="@Url.Content("~/js/vendor.js")"></script>
 <script src="@Url.Content("~/js/admin.js")" type="text/javascript"></script>
